--- a/recipes.html
+++ b/recipes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Make or Purchase Dinner Tonight</title>
+    <title>An App for Food Lovers</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
@@ -16,11 +16,28 @@
     </script>
   </head>
   <body>
+    <nav>
+      <div class="nav-wrapper" style="padding-left: 20px;">
+        <a href="#" class="brand-logo">An App for Food Lovers</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="home.html">Home</a></li>
+          <li><a href="restaurants.html">Go to Restaurants</a></li>
+          <li><a href="recipes.html">Recipes</a></li>
+          <li>
+            <a
+              href="https://www.wholefoodsmarket.com/grocery-delivery-and-pickup"
+              target="_blank"
+              >Order Ingredients</a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div class="container">
       <form>
         <div class="row">
           <div class="col s12">
-            <h4>What type of cuisine would you like?</h4>
+            <h4>What type of cuisine would you like to make?</h4>
           </div>
         </div>
         <div class="row">
@@ -57,18 +74,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col s12 l4">
+          <div class="col s12">
             <button class="waves-effect waves-light btn">Get Recipes</button>
-          </div>
-          <div class="col s12 l4">
-            <button class="waves-effect waves-light btn">
-              Delivery/Take Out
-            </button>
-          </div>
-          <div class="col s12 l4">
-            <button class="waves-effect waves-light btn">
-              Dine in restaurants
-            </button>
           </div>
         </div>
       </form>
