ready to pass on to brandon

--- a/restaurants.html
+++ b/restaurants.html
@@ -41,22 +41,42 @@
           </div>
         </div>
         <div class="row">
-          <form class="col s12">
-            <div class="row">
-              <div class="input-field col s12">
-                <textarea
-                  id="textarea1"
-                  class="materialize-textarea"
-                ></textarea>
-                <label for="textarea1"></label>
-              </div>
-            </div>
-          </form>
+          <div class="col s12">
+            <select class="input-field browser-default">
+              <option value="" disabled selected>Choose your Cuisine</option>
+              <option value="1">African</option>
+              <option value="2">American</option>
+              <option value="3">British</option>
+              <option value="4">Cajun</option>
+              <option value="5">Caribbean</option>
+              <option value="6">Chinese</option>
+              <option value="7">Eastern European</option>
+              <option value="8">European</option>
+              <option value="9">French</option>
+              <option value="10">German</option>
+              <option value="11">Greek</option>
+              <option value="12">Indian</option>
+              <option value="13">Irish</option>
+              <option value="14">Italian</option>
+              <option value="15">Japanese</option>
+              <option value="16">Jewish</option>
+              <option value="17">Korean</option>
+              <option value="18">Latin American</option>
+              <option value="19">Mediterranean</option>
+              <option value="20">Mexican</option>
+              <option value="21">Middle Eastern</option>
+              <option value="22">Nordic</option>
+              <option value="23">Southern</option>
+              <option value="24">Spanish</option>
+              <option value="25">Thai</option>
+              <option value="26">Vietnamese</option>
+            </select>
+          </div>
         </div>
         <div class="row">
           <div class="col s12">
             <button class="waves-effect waves-light btn">
-              find restaurants
+              Find Restaurants
             </button>
           </div>
         </div>
