--- a/recipes.html
+++ b/recipes.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>An App for Food Lovers</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <script>
-      $(document).ready(function () {
-        $("select").formSelect();
-      });
-    </script>
-  </head>
-  <body>
-    <nav>
-      <div class="nav-wrapper" style="padding-left: 20px;">
-        <a href="#" class="brand-logo">An App for Food Lovers</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="home.html">Home</a></li>
-          <li><a href="restaurants.html">Go to Restaurants</a></li>
-          <li><a href="recipes.html">Recipes</a></li>
-          <li>
-            <a
-              href="https://www.wholefoodsmarket.com/grocery-delivery-and-pickup"
-              target="_blank"
-              >Order Ingredients</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>An App for Food Lovers</title>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="button.css" />
+  <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://use.fontawesome.com/a007169725.js"></script>
+  <script src="https://kit.fontawesome.com/ca74989e44.js" crossorigin="anonymous"></script>
+  <script src="assets/button.js"></script>
+  <script src="script.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("select").formSelect();
+    });
+  </script>
+  
+</head>
+<body>
+  <nav>
+    <div class="nav-wrapper" style="padding-left: 20px;">
+      <a href="#" class="brand-logo"><i class="fas fa-utensils"></i><i class="fas fa-hamburger"></i><i class="fas fa-pizza-slice"></i><i class="far fa-lemon"></i>An App for Food Lovers</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="home.html"></i>Home</a></li>
+        <li><a href="restaurants.html"></i>Go to Restaurants</a></li>
+        <li><a href="recipes.html"></i>Recipes</a></li>
+        
+        
+        <li>
+          <a
+          href="https://www.wholefoodsmarket.com/grocery-delivery-and-pickup"
+          target="_blank"
+          >Order Ingredients</a
+          >
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <section>
     <div class="container">
       <form>
         <div class="row">
@@ -75,20 +84,16 @@
         </div>
         <div class="row">
           <div class="col s12">
-            <button class="waves-effect waves-light btn">Get Recipes</button>
+            <a href="#" onclick="getRecipies()" class="boton">Get Recipes</a>
           </div>
         </div>
       </form>
     </div>
-    <!-- <div class="container">
-        searching results show up here
-    </div> -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.5.0.js"
-      integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  </section>
+  <!-- <div class="container">
+    searching results show up here
+  </div> -->
+  
+  
+</body>
 </html>
