--- a/recipes.html
+++ b/recipes.html
@@ -6,14 +6,12 @@
   <title>An App for Food Lovers</title>
   <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="button.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/button.css" />
   <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://use.fontawesome.com/a007169725.js"></script>
   <script src="https://kit.fontawesome.com/ca74989e44.js" crossorigin="anonymous"></script>
-  <script src="assets/button.js"></script>
-  <script src="script.js"></script>
   <script>
     $(document).ready(function () {
       $("select").formSelect();
@@ -94,6 +92,6 @@
     searching results show up here
   </div> -->
   
-  
+  <script src="assets/js/button.js"></script>
 </body>
 </html>
