added foodType to query url

--- a/restaurants.html
+++ b/restaurants.html
@@ -12,11 +12,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://use.fontawesome.com/a007169725.js"></script>
   <script src="https://kit.fontawesome.com/ca74989e44.js" crossorigin="anonymous"></script>
-  <script>
-    $(document).ready(function () {
-      $("select").formSelect();
-    });
-  </script>
 </head>
 <body>
   <nav>
@@ -71,15 +66,13 @@
             </select>
           </div>
         </div>
-        <div class="row">
-          <div class="col s12">
+        <div class="col s12">
             <a href="#" onclick="getRestaurants()" class="boton">Find Restaurants</a>
-          </button>
         </div>
-      </div>
     </form>
   </div>
 </section>
+<script>$(document).ready(function(){})</script>
 <script src="assets/js/button.js"></script>
   <script src="assets/js/restaurant.js"></script>
 </body>
