Yelp api running fully, tested append to page

--- a/restaurants.html
+++ b/restaurants.html
@@ -69,6 +69,9 @@
         <div class="col s12">
             <a href="#" onclick="getRestaurants()" class="boton">Find Restaurants</a>
         </div>
+        <div id="restaurants" class="col s10">
+          
+        </div>
     </form>
   </div>
 </section>
