updated home page

--- a/recipes.html
+++ b/recipes.html
@@ -83,8 +83,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col s12">
-            <a href="#" onclick="getRecipies()" class="boton">Get Recipes</a>
+          <div class="col s4">
+            <a href="#" onclick="getRecipes()" class="boton">Get Recipes</a>
           </div>
         </div>
       </form>
