--- a/home.html
+++ b/home.html
@@ -24,17 +24,47 @@
         <li><a href="restaurants.html">Go to Restaurants</a></li>
         <li><a href="recipes.html">Recipes</a></li>
         <li>
-          <a
-          href="https://www.wholefoodsmarket.com/grocery-delivery-and-pickup"
-          target="_blank"
-          >Order Ingredients</a
-          >
+          <a href="https://www.wholefoodsmarket.com/grocery-delivery-and-pickup" target="_blank">Order Ingredients</a>
         </li>
       </ul>
     </div>
   </nav>
-  <section>
-    
-  </section>
+  <section class="home">
+    <div class = "container">
+      <h4 class="center">"One cannot think well, love well, sleep well, if one has not dined well"<br>--Virginia Woolf, A Room of Ones Own</h4>
+      <div class="row">
+        <div class ="col s12 m4 card">
+          <img src = "assets/img/chinese.jpeg" class ="responsive-img card materialbox">
+          
+        </div>
+        <div class ="col s12 m4 card">
+          <img src = "assets/img/hamburger.jpeg" class ="responsive-img card materialbox">
+        </div>
+        <div class ="col s12 m4 card">
+          <img src = "assets/img/hamburger.jpeg" class ="responsive-img card materialbox">
+        </div>
+      </div>
+      <div class="row">
+        <div class ="col s12 m6 card">
+          <img src = "assets/img/indian.jpeg" class ="responsive-img card materialbox">
+        </div>
+        <div class ="col s12 m6 card">
+          <img src = "assets/img/indian.jpeg" class ="responsive-img card materialbox">
+        </div>
+      </div>
+    <div class="row">
+      <div class ="col s12 m4 card">
+        <img src = "assets/img/mexican.jpeg" class ="responsive-img card materialbox">
+      </div>
+      <div class ="col s12 m4 card">
+        <img src = "assets/img/pasta.jpeg" class ="responsive-img card materialbox">
+      </div>
+      <div class ="col s12 m4 card">
+        <img src = "assets/img/sushi.jpeg" class ="responsive-img card materialbox">
+      </div>
+    </div>
+  </div>
+</section>
+
 </body>
 </html>
