--- a/home.html
+++ b/home.html
@@ -6,14 +6,21 @@
   <title>An App for Food Lovers</title>
   <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="button.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/button.css" />
   <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://use.fontawesome.com/a007169725.js"></script>
   <script src="https://kit.fontawesome.com/ca74989e44.js" crossorigin="anonymous"></script>
-  <script src="assets/button.js"></script>
-  <script src="script.js"></script>
+  <!-- Note from tutor: Any included scripts should be included in the head, not in the body.
+  Only include scripts in the body if it is _ABSOLUTELY NECESSARY_, 
+  if you are using JQuery and $(document).ready(), you do not need to put them in the body. 
+  
+  Putting script tags at the bottom of the body is a hack to make the js run _after_ the rest of the page has loaded.
+   $(document).ready() does this for you.-->
+  <script src="assets/js/button.js"></script>
+  <script src="assets/js/searchHistory.js"></script>
+  
 </head>
 <body>
   <nav>
@@ -23,20 +30,30 @@
         <li><a href="home.html">Home</a></li>
         <li><a href="restaurants.html">Go to Restaurants</a></li>
         <li><a href="recipes.html">Recipes</a></li>
-        <li>
-          <a href="https://www.wholefoodsmarket.com/grocery-delivery-and-pickup" target="_blank">Order Ingredients</a>
-        </li>
+        <li><a href="https://www.wholefoodsmarket.com/grocery-delivery-and-pickup" target="_blank">Order Ingredients</a></li>
       </ul>
     </div>
   </nav>
   <section class="home">
     <div class = "container">
-      <h4 class="center">"One cannot think well, love well, sleep well, if one has not dined well"<br>--Virginia Woolf, A Room of Ones Own</h4>
+
+      <div class="row">
+        <div class="col s12">
+          <h4 class="center">"One cannot think well, love well, sleep well, if one has not dined well"<br>--Virginia Woolf, A Room of Ones Own</h4>
+        </div>
+      </div>
+      
       <div class="row">
         <div class ="col s12 m4 card">
-          <img src = "assets/img/chinese.jpeg" class ="responsive-img card materialbox">
-          
+          <div class="card-image">
+            <img src = "assets/img/chinese.jpeg">
+            <span class="card-title">Wonton Soup</span>
+          </div>
         </div>
+
+
+
+
         <div class ="col s12 m4 card">
           <img src = "assets/img/hamburger.jpeg" class ="responsive-img card materialbox">
         </div>
