--- a/home.html
+++ b/home.html
@@ -33,55 +33,59 @@
         <li><a href="https://www.wholefoodsmarket.com/grocery-delivery-and-pickup" target="_blank">Order Ingredients</a></li>
       </ul>
     </div>
-  </nav>
-  <section class="home">
-    <div class = "container">
-
-      <div class="row">
-        <div class="col s12">
-          <h4 class="center">"One cannot think well, love well, sleep well, if one has not dined well"<br>--Virginia Woolf, A Room of Ones Own</h4>
+    <section class="home">
+      <div class = "container">
+        <div class="row">
+          <div class="col s12">
+            <h4 class="center">"One cannot think well, love well, sleep well, if one has not dined well"<br>--Virginia Woolf, A Room of Ones Own</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class ="col s12 m4 card">
+            <div class="card-image">
+              <img src = "assets/img/chinese.jpeg">
+              <!-- <span class="card-title">Wonton Soup</span> -->                                                 
+            </div>
+          </div>
+          <div class ="col s12 m4 card">
+            <div class="card-image">
+              <img src = "assets/img/mexican.jpeg">
+              <!-- <span class="card-title">Mexican Food</span> -->
+            </div>
+          </div>
+          <div class ="col s12 m4 card">
+            <div class="card-image">
+              <img src = "assets/img/hamburger.jpeg">
+              <!-- <span class="card-title">Mexican Food</span> -->
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class ="col s12 m4 card">
+            <div class="card-image">
+              <img src = "assets/img/indian.jpeg">
+              <!-- <span class="card-title">Mexican Food</span> -->
+            </div>
+          </div>
+          <div class="row">
+            <div class ="col s12 m4 card">
+              <div class="card-image">
+                <img src = "assets/img/pasta.jpeg">
+                <!-- <span class="card-title">Mexican Food</span> -->
+              </div>
+            </div>
+            <div class="row">
+              <div class ="col s12 m4 card">
+                <div class="card-image">
+                  <img src = "assets/img/sushi.jpeg">
+                  <!-- <span class="card-title">Mexican Food</span> -->
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       
-      <div class="row">
-        <div class ="col s12 m4 card">
-          <div class="card-image">
-            <img src = "assets/img/chinese.jpeg">
-            <span class="card-title">Wonton Soup</span>
-          </div>
-        </div>
-
-
-
-
-        <div class ="col s12 m4 card">
-          <img src = "assets/img/hamburger.jpeg" class ="responsive-img card materialbox">
-        </div>
-        <div class ="col s12 m4 card">
-          <img src = "assets/img/hamburger.jpeg" class ="responsive-img card materialbox">
-        </div>
-      </div>
-      <div class="row">
-        <div class ="col s12 m6 card">
-          <img src = "assets/img/indian.jpeg" class ="responsive-img card materialbox">
-        </div>
-        <div class ="col s12 m6 card">
-          <img src = "assets/img/indian.jpeg" class ="responsive-img card materialbox">
-        </div>
-      </div>
-    <div class="row">
-      <div class ="col s12 m4 card">
-        <img src = "assets/img/mexican.jpeg" class ="responsive-img card materialbox">
-      </div>
-      <div class ="col s12 m4 card">
-        <img src = "assets/img/pasta.jpeg" class ="responsive-img card materialbox">
-      </div>
-      <div class ="col s12 m4 card">
-        <img src = "assets/img/sushi.jpeg" class ="responsive-img card materialbox">
-      </div>
-    </div>
-  </div>
-</section>
-
-</body>
-</html>
+    </body>
+    </html>
+    </section>     
