fixed index.html name and links

--- a/restaurants.html
+++ b/restaurants.html
@@ -18,7 +18,7 @@
     <div class="nav-wrapper" style="padding-left: 20px;">
       <a href="#" class="brand-logo"><i class="fas fa-utensils"></i><i class="fas fa-hamburger"></i><i class="fas fa-pizza-slice"></i><i class="far fa-lemon"></i>An App for Food Lovers</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="home.html"></i>Home</a></li>
+        <li><a href="index.html"></i>Home</a></li>
         <li><a href="restaurants.html"></i>Go to Restaurants</a></li>
         <li><a href="recipes.html"></i>Recipes</a></li>
         <li><a href="https://www.wholefoodsmarket.com/grocery-delivery-and-pickup" target="_blank">Order Ingredients</a></li>
