html validation, minor font changes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
           <div class="col s12">
             <h4 class="center">
               "One cannot think well, love well, sleep well, if one has not
-              dined well"<br />--Virginia Woolf, A Room of Ones Own
+              dined well"<br />
+              <span class="quote-author"
+                >--Virginia Woolf, A Room of Ones Own</span
+              >
             </h4>
           </div>
         </div>
