--- a/recipes.html
+++ b/recipes.html
@@ -32,6 +32,7 @@
       });
     </script>
     <script src="assets/js/button.js"></script>
+    <script src="assets/js/newrecipe.js"></script>
   </head>
   <body>
     <nav>
@@ -65,7 +66,7 @@
           </div>
           <div class="row">
             <div class="col s12 l5">
-              <select class="input-field browser-default">
+              <select id="cuisine" class="input-field browser-default">
                 <option value="" disabled selected>Choose a Cuisine</option>
                 <option value="African">African</option>
                 <option value="American">American</option>
@@ -96,18 +97,21 @@
               </select>
             </div>
             <div class="col s12 l5">
-              <select class="input-field browser-default">
-                <option value="" disabled selected># of Results Showing</option>
+              <select id="numberofRecipes" class="input-field browser-default">
+                <option value="0" disabled selected># of Results Showing</option>
                 <option value="3">3</option>
                 <option value="6">6</option>
                 <option value="9">9</option>
               </select>
             </div>
             <div class="col s12 l2">
-              <a href="#" onclick="" class="boton">Get Recipes</a>
+              <a href="#"  class="boton">Get Recipes</a>
+ 
+
+        
             </div>
           </div>
-          <div class="card recipes-results">
+          <div id="output" class="card recipes-results">
             <div class="row">
               <div class="col s12 l4">
                 <div class="card-image"></div>
@@ -132,5 +136,8 @@
         </div>
       </div>
     </footer>
+    <script>
+      $(".boton").click(getCuisine);
+    </script>
   </body>
 </html>
