committing javascriptfor recipes page

--- a/recipes.html
+++ b/recipes.html
@@ -106,8 +106,6 @@
             </div>
             <div class="col s12 l2">
               <a href="#"  class="boton">Get Recipes</a>
- 
-
         
             </div>
           </div>
@@ -117,7 +115,7 @@
                 <div class="card-image"></div>
               </div>
               <div class="col s12 l8">
-                <div class="card-content"></div>
+                <div id="output"class="card-content"></div>
               </div>
             </div>
           </div>
