restaurants.html changes

--- a/restaurants.html
+++ b/restaurants.html
@@ -19,11 +19,11 @@
     <div class="nav-wrapper" style="padding-left: 20px;">
       <a href="#" class="brand-logo"><i class="fas fa-utensils"></i><i class="fas fa-hamburger"></i><i class="fas fa-pizza-slice"></i><i class="far fa-lemon"></i>An App for Food Lovers</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="index.html"></i>Home</a></li>
-        <li><a href="restaurants.html"></i>Go to Restaurants</a></li>
-        <li><a href="recipes.html"></i>Recipes</a></li>
-        <li><a href="https://www.wholefoodsmarket.com/grocery-delivery-and-pickup" target="_blank">Order Ingredients</a></li>
-      </ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="restaurants.html">Go to Restaurants</a></li>
+        <li><a href="recipes.html">Recipes</a></li>
+        <li><a href="google.com" target="_blank">Order Ingredients</a></li>
+      </ul>pickup
     </div>
   </nav>
   <section>
@@ -57,13 +57,11 @@
               <option value="Irish">Irish</option>
               <option value="Italian">Italian</option>
               <option value="Japanese">Japanese</option>
-              <option value="Jewish">Jewish</option>
               <option value="Korean">Korean</option>
               <option value="Latin American">Latin American</option>
               <option value="Mediterranean">Mediterranean</option>
               <option value="Mexican">Mexican</option>
               <option value="Middle Eastern">Middle Eastern</option>
-              <option value="Nordic">Nordic</option>
               <option value="Southern">Southern</option>
               <option value="Spanish">Spanish</option>
               <option value="Thai">Thai</option>
