--- a/recipes.html
+++ b/recipes.html
@@ -96,7 +96,7 @@
               </select>
             </div>
             <div class="col s12 l5">
-              <select id="numberofRecipes" class="input-field browser-default">
+              <select id="recipesNum" class="input-field browser-default">
                 <option value="0" disabled selected
                   ># of Results Showing</option
                 >
@@ -109,20 +109,7 @@
               <a href="#" class="boton">Get Recipes</a>
             </div>
           </div>
-          <div id="output" class="recipes-results">
-            <!-- <div class="row">
-              <div class="col s12 l4">
-                <div class="card-image"></div>
-              </div>
-              <div class="col s12 l8">
-                <div
-                  id="output"
-                  style="padding-top: 10px;"
-                  class="card-content"
-                ></div>
-              </div>
-            </div> -->
-          </div>
+          <div id="output" class="recipes-results"></div>
         </form>
       </div>
     </section>
